- Improved : Removing the logger out of array, now each part is running separately. (stranger)
- Improved : Xoops_rtl.css has been reformed to let the logger be rtl. (stranger)
- Improved : Updated PDF library to the latest version 3.1.000 (stranger)
- Improved : All 3 theme set to be selectable. (stranger)

- Changed : Small change with the term "Personalization" instead of "Personalisation". (malanciault)
- Changed : Encryption method in preferences to select field type instead of yesno. (vaughan)
- Changed : Replacing the string on the footer in the install process with date func. (stranger)
- Changed : updated htmlpurifier library from 3.1.0 rc1 to 3.1.1 Final (Standalone version) (vaughan)
- Changed : htmlpurifier now loaded only when icms.htmlpurifier.php class is instanciated rather than with preload. (vaughan)
- Changed : undoHtmlSpecialChars() now uses php 5 function, htmlspecialchars_decode($var, ENT_NOQUOTES, _CHARSET)  (vaughan/stranger)
- Changed : Logger terms like XOOPS have been changed to ICMS. (vaughan/stranger)

- Fixed : In the control panel, changing the top-left logo link to default to the home page of the site as discussed here http://lnk.in/5zvw . (stranger/malanciault))
- Fixed : #1971839 - Undefined variable: key in \kernel\icmskernel.php on line 88. (trabis/malanciault)
- Fixed : #1971844 - Undefined variable: urls in kernel\icmskernel.php on line 93. (trabis/malanciault)
- Fixed : #1969064 - edit the blocks from frontend. (real_therplima)
- Fixed : #1968351 - Personalisation preferences name in english. (stranger)
- Fixed : #1968350 - Make the [hide] tag optional and turned off by default. (stranger)
- Fixed : #1964821 - Sorting of "Site Preferences". (real_therplima)
- Fixed : #1964817 - Hardcodevariable on "content_blocks.php". (stranger)
- Fixed : #1964812 - e-mail protection and userinfo.php. (stranger)
- Fixed : #1964440 - e-mail protection and content. (stranger)
- Fixed : #1971202 - Hide Salt Key on step 9. (vaughan)