@@ -33,6 +33,7 @@ Unreleased : ImpressCMS 1.1 Alpha 2
 - Improved : Xoops_rtl.css has been reformed to let the logger be rtl. (stranger)
 - Improved : Updated PDF library to the latest version 3.1.000 (stranger)
 - Improved : All 3 theme set to be selectable. (stranger)
+- Improved : In footer.php, we are now including notificaton_select.php only when needed (wizanda/malanciault)
 
 - Changed : Small change with the term "Personalization" instead of "Personalisation". (malanciault)
 - Changed : Encryption method in preferences to select field type instead of yesno. (vaughan)
